# lily

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .tokeignore  BUILD.md  CHANGELOG.md  CI.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_STYLES.md  CONTRIBUTING.md  Cargo.toml  Doxyfile  FEATURES_TODO.md  GIT.md  LICENCE  LICENSE  LILY.md  Makefile  README.md  app.lily  test.lily
lib/builtin/: CMakeLists.txt  Math.lily  alloc.c  alloc.h  cstr.c  cstr.h  lib.lily  math.c  math.h
lib/cc/std/src/: CMakeLists.txt  errno.c  errno_map.c  start.c
lib/sys/: CMakeLists.txt  sys.c  sys.h
src/base/: CMakeLists.txt  README.md  alloc.c  allocator.c  atof.c  atoi.c  box.c  cli.c  color.c  command.c  dir.c  dup.c  env.c  fd.c  file.c  fork.c  format.c  fs_watcher.c  hash_map.c  hash_set.c  itoa.c  linked_list.c  list.c  optional.c  ordered_hash_map.c  path.c  pipe.c  rc.c  sized_array.c  sized_str.c  stack.c  str.c  string.c  test.c  vec.c  vec_bit.c  yaml.c
src/base/cli/: args.c  command.c  default_action.c  diagnostic.c  help.c  option.c  parser.c  result.c  section.c  value.c
src/base/cli/result/: command.c  option.c  value.c
src/base/hash/: custom.c  fnv.c  jenkins.c  sip.c
src/base/memory/: api.c  arena.c  block.c  cell.c  global.c  layout.c  page.c
src/base/object/: schema.c  value.c
src/base/object/value/: list.c  object.c
src/cli/ci/: CMakeLists.txt  ci.c  config.c  parse_config.c
src/cli/cic/: CMakeLists.txt  cic.c  config.c  parse_config.c
src/cli/lily/: CMakeLists.txt  lily.c  parse_config.c
src/cli/lilyc/: CMakeLists.txt  lilyc.c  parse_config.c
src/command/ci/: CMakeLists.txt  ci.c
src/command/ci/self_test/: diagnostic.c  metadata.c  poll.c  process_unit.c  run.c  self_test.c
src/command/cic/: CMakeLists.txt  cic.c
src/command/lily/: CMakeLists.txt
src/command/lily/compile/: compile.c
src/command/lily/run/: run.c
src/command/lilyc/: CMakeLists.txt  lilyc.c
src/core/cc/: CMakeLists.txt  error.c  token.c  warning.c
src/core/cc/ci/: CMakeLists.txt  Cargo.toml  README.md  app.ci  ast.c  builtin.c  compile.c  config.c  features.c  file.c  generator.c  include.c  infer.c  parser.c  predefined.c  primary_data_types.c  project_config.c  resolver.c  result.c  scanner.c  state_checker.c  std_types.c  token.c  typecheck.c  visitor.c
src/core/cc/comptime_gen/: CMakeLists.txt  Cargo.toml  test.c
src/core/cc/diagnostic/: CMakeLists.txt  error.c  warning.c
src/core/cc/runtime/: start.c
src/core/cpp/diagnostic/: CMakeLists.txt  error.c  warning.c
src/core/lily/: CMakeLists.txt  README.md  analysis.c  builtin.c  error.c  ir.c  linker.c  mir.c  parser.c  precompile.c  preparser.c  program.c  scanner.c  sys.c  token.c  visibility.c  warning.c
src/core/lily/analysis/: CMakeLists.txt  analysis.c
src/core/lily/ast/: attribute.c  data_type.c  decl.c  expr.c  field.c  field_object.c  generic_param.c  impl_param.c  inherit_param.c  pattern.c  stmt.c  variant.c
src/core/lily/checked/: access.c  compiler_generic.c  data_type.c  decl.c  drop_table.c  expr.c  field.c  field_object.c  generic_param.c  global_name.c  history.c  impl_param.c  inherit_param.c  operator.c  operator_register.c  parent.c  pattern.c  safety_mode.c  scope.c  scope_container.c  scope_decls.c  scope_response.c  signature.c  stmt.c  variant.c  virtual_scope.c
src/core/lily/compiler/: CMakeLists.txt
src/core/lily/diagnostic/: CMakeLists.txt  error.c  warning.c
src/core/lily/functions/: CMakeLists.txt  builtin.c  sys.c
src/core/lily/interpreter/: CMakeLists.txt  memory.c  value.c  vm.c
src/core/lily/ir/: cc.c  cpp.c  js.c  (+1 more)
src/core/shared/: CMakeLists.txt  cursor.c  diagnostic.c  file.c  location.c  scanner.c  search.c  source.c
tests/: CMakeLists.txt
tests/base/: CMakeLists.txt  allocator.c  atof.c  atoi.c  base.c  buffer.c  format.c  hash_map.c  hash_set.c  itoa.c  stack.c  str.c  string.c  vec.c  vec_bit.c
tests/base/memory/: arena.c  global.c  page.c
tests/mypkg/: a.lily  b.lily  c.lily  main.lily
tests/mypkg/app/: pkg.lily  t.lily
tests/samples/: CMakeLists.txt
tests/samples/alias/: alias.lily
tests/samples/array/: dynamic_array.lily  multi_pointers_array.lily  sized_array.lily  undetermined_array.lily
tests/samples/asm/: syscall.lily
tests/samples/bool/: and.lily  not.lily  or.lily
tests/samples/builtin/: len.lily  max.lily  min.lily
tests/samples/byte/: byte.lily
tests/samples/bytes/: bytes.lily
tests/samples/cast/: cast.lily  dyn.lily
tests/samples/char/: char.lily
tests/samples/class/: attribute.lily  class.lily  global.lily  impl.lily  inherit.lily  method.lily
tests/samples/constant/: constant.lily  multiple.lily
tests/samples/enum/: enum.lily
tests/samples/enum_object/: enum_object.lily  method.lily
tests/samples/error/: error.lily  match.lily  raise.lily
tests/samples/float/: float.lily
tests/samples/function/: default_param.lily  function.lily
tests/samples/generic/: constraint.lily  generic.lily
tests/samples/global/: global.lily
tests/samples/import/: import.lily
tests/samples/integer/: integer.lily
tests/samples/lambda/: instant_call.lily  lambda.lily
tests/samples/list/: append.lily  list.lily  match.lily  prepend.lily
tests/samples/loop/: for.lily  while.lily
tests/samples/macro/: macro.lily  macro_in_enum.lily  macro_in_enum_object.lily  macro_in_record.lily  macro_in_record_object.lily  macro_in_trait.lily
tests/samples/match/: exception.lily  variant_call.lily
tests/samples/method/: method.lily
tests/samples/module/: module.lily  module_path.lily
tests/samples/operator/: chain.lily  operator.lily
tests/samples/optional/: optional.lily
tests/samples/package/: package.lily
tests/samples/pointer/: pointer.lily  trace.lily
tests/samples/record/: record.lily  record_mut.lily
tests/samples/record_object/: record_object.lily
tests/samples/reference/: mut.lily  reference.lily
tests/samples/str/: str.lily
tests/samples/sys/: write.lily
tests/samples/trait/: trait.lily
tests/samples/tuple/: for.lily  tuple.lily
tests/samples/unsafe/: unsafe.lily
(+1880 files in other folders)
